v0.2.1/classification/mapping-room-activity-to-d0165.md
# Room activity to D0165 mapping

Source: [`abstract-room-classification-to-d0165.mapping.ttl`](sources/mapping-room-activity-to-d0165.ttl)

External target labels are not shipped in this repository; only codes and IRIs are shown.

## Dataset

- **description (en):** Operational 1:n mapping from abstract classes to D0165 categories/leaves.
- **title (en):** Abstract Building Classification to D0165 mapping

## Links

| Source | Relation | Targets |
| --- | --- | --- |
| `abs:M` | `mapsToD0165` | `d0165:HNF-1` |
| `abs:M` | `mapsToD0165` | `d0165:HNF-2` |
| `abs:M` | `mapsToD0165` | `d0165:HNF-3` |
| `abs:M` | `mapsToD0165` | `d0165:HNF-4` |
| `abs:M` | `mapsToD0165` | `d0165:HNF-5` |
| `abs:M` | `mapsToD0165` | `d0165:HNF-6` |
| `abs:M-CIR` | `mapsToD0165` | `d0165:VF-9` |
| `abs:M-CIR` | `mapsToD0165` | `d0165:VF-9-1` |
| `abs:M-CIR` | `mapsToD0165` | `d0165:VF-9-2` |
| `abs:M-COM` | `mapsToD0165` | `d0165:HNF-4` |
| `abs:M-HEL` | `mapsToD0165` | `d0165:HNF-6` |
| `abs:M-LRN` | `mapsToD0165` | `d0165:HNF-5` |
| `abs:M-RES` | `mapsToD0165` | `d0165:HNF-1` |
| `abs:M-WRK` | `mapsToD0165` | `d0165:HNF-2` |
| `abs:M-WRK` | `mapsToD0165` | `d0165:HNF-3` |
| `abs:M-WRK-KNW` | `mapsToD0165` | `d0165:HNF-2` |
| `abs:M-WRK-PRD` | `mapsToD0165` | `d0165:HNF-3` |
| `abs:O` | `mapsToD0165` | `d0165:AFF` |
| `abs:O` | `mapsToD0165` | `d0165:ANF` |
| `abs:O` | `mapsToD0165` | `d0165:AVF` |
| `abs:O` | `mapsToD0165` | `d0165:BUF-10` |
| `abs:O` | `mapsToD0165` | `d0165:UUF` |
| `abs:O-CIR` | `mapsToD0165` | `d0165:AVF` |
| `abs:O-CIR` | `mapsToD0165` | `d0165:BUF-10-2` |
| `abs:O-CIR-PED` | `mapsToD0165` | `d0165:AVF` |
| `abs:O-CIR-PED` | `mapsToD0165` | `d0165:BUF-10-2` |
| `abs:O-CIR-RD` | `mapsToD0165` | `d0165:AVF` |
| `abs:O-CIR-RD` | `mapsToD0165` | `d0165:BUF-10-2` |
| `abs:O-GRN` | `mapsToD0165` | `d0165:UUF` |
| `abs:O-GRN-GDN` | `mapsToD0165` | `d0165:BUF-10-3` |
| `abs:O-GRN-GDN` | `mapsToD0165` | `d0165:UUF` |
| `abs:O-GRN-REC` | `mapsToD0165` | `d0165:BUF-10-3` |
| `abs:O-GRN-REC` | `mapsToD0165` | `d0165:UUF` |
| `abs:O-GRN-SPT` | `mapsToD0165` | `d0165:BUF-10-3` |
| `abs:S` | `mapsToD0165` | `d0165:FF-8` |
| `abs:S` | `mapsToD0165` | `d0165:NNF-7` |
| `abs:S` | `mapsToD0165` | `d0165:VF-9` |
| `abs:S-CIR` | `mapsToD0165` | `d0165:VF-9` |
| `abs:S-CIR-HOR` | `mapsToD0165` | `d0165:VF-9-1` |
| `abs:S-CIR-VRT-MAN` | `mapsToD0165` | `d0165:VF-9-2` |
| `abs:S-CIR-VRT-MEC` | `mapsToD0165` | `d0165:VF-9-3` |
| `abs:S-HYG` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-HYG` | `mapsToD0165` | `d0165:NNF-7-2` |
| `abs:S-HYG-GRD` | `mapsToD0165` | `d0165:NNF-7-2` |
| `abs:S-HYG-SHW` | `mapsToD0165` | `d0165:NNF-7-2` |
| `abs:S-HYG-WC` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-HYG-WC-F` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-HYG-WC-IV` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-HYG-WC-M` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-HYG-WC-MIX` | `mapsToD0165` | `d0165:NNF-7-1` |
| `abs:S-PRK` | `mapsToD0165` | `d0165:BUF-10-1` |
| `abs:S-PRK` | `mapsToD0165` | `d0165:BUF-10-2` |
| `abs:S-PRK` | `mapsToD0165` | `d0165:NNF-7-4` |
| `abs:S-PRK-EXT` | `mapsToD0165` | `d0165:BUF-10-1` |
| `abs:S-PRK-INT` | `mapsToD0165` | `d0165:NNF-7-4` |
| `abs:S-PRK-SVC` | `mapsToD0165` | `d0165:BUF-10-1` |
| `abs:S-PRK-SVC` | `mapsToD0165` | `d0165:NNF-7-4` |
| `abs:S-STO` | `mapsToD0165` | `d0165:NNF-7-3` |
| `abs:S-STO-GEN` | `mapsToD0165` | `d0165:NNF-7-3` |
| `abs:S-STO-LCK` | `mapsToD0165` | `d0165:NNF-7-3` |
| `abs:S-TEC` | `mapsToD0165` | `d0165:FF-8` |
| `abs:S-VOI` | `mapsToD0165` | `d0165:FF-8` |
| `abs:S-VOI` | `mapsToD0165` | `d0165:KFN` |
| `abs:S-VOI` | `mapsToD0165` | `d0165:KFT` |
| `abs:S-VOI` | `mapsToD0165` | `d0165:VF-9-3` |
| `abs:S-VOI-MLT` | `mapsToD0165` | `d0165:VF-9-1` |
| `abs:S-VOI-PLN` | `mapsToD0165` | `d0165:FF-8` |
| `abs:S-VOI-STR` | `mapsToD0165` | `d0165:KFN` |
| `abs:S-VOI-STR` | `mapsToD0165` | `d0165:KFT` |
| `abs:S-VOI-VRT` | `mapsToD0165` | `d0165:FF-8-8` |
| `abs:S-VOI-VRT` | `mapsToD0165` | `d0165:VF-9-3` |
